--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"mdsvex": "^0.11.0",
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
+		"svelte-preprocess": "^5.0.4",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"canvas": "^2.11.2"
+	}
 }
