--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,7 +9,7 @@ collections:
     label: "nyhet" # Used in the UI
     folder: "src/routes/app/nyheter" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    slug: "{{title}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {
           label: "Layout",
@@ -17,6 +17,6 @@ collections:
           widget: "hidden",
           default: "nyheter",
         }
-      - { label: "Titel", name: "Titel", widget: "string" }
-      - { label: "Datum", name: "date", widget: "datetime" }
+      - { label: "title", name: "title", widget: "string" }
+      - { label: "date", name: "date", widget: "datetime" }
       - { label: "Body", name: "body", widget: "markdown" }
