--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,6 @@
 backend:
-  name: github
+  name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
-  repo: Mhdtarek/soderhamns-moske # Path to your GitHub repository
 publish_mode: editorial_workflow
 media_folder: "static/media/uploads" # Media files will be stored in the repo under images/uploads
 public_folder: "/static/media" # The src attribute for uploaded media will begin with /images/uploads
