--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
-  name: git-gateway
-  branch: main # Branch to update (optional; defaults to master)
+  name: github
+  repo: Mhdtarek/soderhamns-moske
+  branch: main
 publish_mode: editorial_workflow
 media_folder: "static/media/uploads" # Media files will be stored in the repo under images/uploads
 public_folder: "/static/media" # The src attribute for uploaded media will begin with /images/uploads
